# sqcad

./: CHANGELOG.md  CITATION.cff  README.md  pyproject.toml
.github/: release-drafter.yml
.github/workflows/: changelog.yaml  publish.yml  release-drafter.yml
docs/source/: api.rst  changelog.rst  conf.py  contributing.rst  index.rst  quickstart.rst  tutorials.rst
docs/source/tutorials/: index.rst
src/sqcad/: __init__.py  models.py  utils.py
src/sqcad/elements/: __init__.py  resonators.py
