[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sqcad"
version = "0.0.1"
description = "Superconducting quantum circuit analysis & design tools."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Elizabeth Kunz"}]
dependencies = [
  "numpy",
  "scipy",
  "scikit-rf",
  "matplotlib",
]

[project.urls]
Homepage = "https://github.com/elizabethkunz/sqcad"


[project.optional-dependencies]
docs = [
  "sphinx",
  "sphinx-nameko-theme",
  "sphinx-design",
  "myst-parser",
  "numpy",
]